spartanized